[gd_scene load_steps=4 format=3 uid="uid://dtbagvxj5to3"]

[ext_resource type="Script" path="res://Scenes/Station UI/station_ui.gd" id="1_8gqs2"]
[ext_resource type="Theme" uid="uid://cyxa5wd6un7de" path="res://Scenes/Station UI/station_ui_MAIN_theme.tres" id="1_20lhg"]
[ext_resource type="Script" path="res://Scenes/Station UI/observed_bodies_list.gd" id="4_ng3on"]

[node name="station_window" type="Window"]
process_mode = 2
title = "Station Access"
position = Vector2i(0, 36)
size = Vector2i(1000, 500)
visible = false
always_on_top = true

[node name="station_control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_20lhg")
script = ExtResource("1_8gqs2")

[node name="sell_data_button" type="Button" parent="station_control"]
custom_minimum_size = Vector2(100, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -27.0
offset_right = 102.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
text = "SELL EXPLORATION DATA
24242409 (75%)"

[node name="undock_button" type="Button" parent="station_control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -31.0
offset_right = 39.0
grow_horizontal = 2
grow_vertical = 0
text = "UNDOCK"

[node name="balance_label" type="Label" parent="station_control"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
text = "BALANCE"

[node name="upgrade_container" type="VBoxContainer" parent="station_control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -321.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="unlock_advanced_scanning_button" type="Button" parent="station_control/upgrade_container"]
layout_mode = 2
text = "UNLOCK ADVANCED SCANNING (20000c)"

[node name="unlock_audio_visualizer" type="Button" parent="station_control/upgrade_container"]
layout_mode = 2
text = "UNLOCK AUDIO VISUALIZER (30000c)
(ADVANCED SCANNING REQUIRED)"

[node name="save_audio_profiles_control" type="Control" parent="station_control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_20lhg")

[node name="margin" type="MarginContainer" parent="station_control/save_audio_profiles_control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="panel" type="Panel" parent="station_control/save_audio_profiles_control/margin"]
custom_minimum_size = Vector2(880, 400)
layout_mode = 2

[node name="panel_margin" type="MarginContainer" parent="station_control/save_audio_profiles_control/margin/panel"]
custom_minimum_size = Vector2(880, 400)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="vertical" type="VBoxContainer" parent="station_control/save_audio_profiles_control/margin/panel/panel_margin"]
custom_minimum_size = Vector2(880, 400)
layout_mode = 2

[node name="info_label" type="Label" parent="station_control/save_audio_profiles_control/margin/panel/panel_margin/vertical"]
custom_minimum_size = Vector2(880, 0)
layout_mode = 2
text = "The wider astronomical community on (STATION NAME) has analyzed the legitimacy of additional observations you have inferred on unknown bodies during your travels."
horizontal_alignment = 1
autowrap_mode = 2

[node name="observed_bodies_list" type="ItemList" parent="station_control/save_audio_profiles_control/margin/panel/panel_margin/vertical"]
custom_minimum_size = Vector2(880, 0)
layout_mode = 2
size_flags_vertical = 3
max_columns = 4
icon_mode = 0
script = ExtResource("4_ng3on")

[node name="finished_button" type="Button" parent="station_control/save_audio_profiles_control/margin/panel/panel_margin/vertical"]
custom_minimum_size = Vector2(880, 0)
layout_mode = 2
text = "FINISHED"

[connection signal="pressed" from="station_control/sell_data_button" to="station_control" method="_on_sell_data_button_pressed"]
[connection signal="pressed" from="station_control/undock_button" to="station_control" method="_on_undock_button_pressed"]
[connection signal="pressed" from="station_control/upgrade_container/unlock_advanced_scanning_button" to="station_control" method="_on_unlock_advanced_scanning_button_pressed"]
[connection signal="pressed" from="station_control/upgrade_container/unlock_audio_visualizer" to="station_control" method="_on_unlock_audio_visualizer_pressed"]
[connection signal="item_clicked" from="station_control/save_audio_profiles_control/margin/panel/panel_margin/vertical/observed_bodies_list" to="station_control/save_audio_profiles_control/margin/panel/panel_margin/vertical/observed_bodies_list" method="_on_item_clicked"]
[connection signal="pressed" from="station_control/save_audio_profiles_control/margin/panel/panel_margin/vertical/finished_button" to="station_control" method="_on_finished_button_pressed"]
